syntax = "proto3";

package job.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";  // Add this import

option go_package = "github.com/nedson202/dts-go/proto/job/v1;jobv1";

service JobService {
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse) {
    option (google.api.http) = {
      post: "/v1/jobs"
      body: "*"
    };
  }
  rpc GetJob(GetJobRequest) returns (JobResponse) {
    option (google.api.http) = {
      get: "/v1/jobs/{id}"
    };
  }
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {
    option (google.api.http) = {
      get: "/v1/jobs"
    };
  }
  rpc UpdateJob(UpdateJobRequest) returns (JobResponse) {
    option (google.api.http) = {
      put: "/v1/jobs/{id}"
      body: "*"
    };
  }
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse) {
    option (google.api.http) = {
      delete: "/v1/jobs/{id}"
    };
  }
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse) {
    option (google.api.http) = {
      post: "/v1/jobs/{id}/cancel"
    };
  }
}

enum JobStatus {
  UNSPECIFIED = 0;
  PENDING = 1;
  SCHEDULED = 2;
  RUNNING = 3;
  COMPLETED = 4;
  FAILED = 5;
  PAUSED = 6;
  CANCELLED = 7;
  RETRYING = 8;
}

message JobResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string cron_expression = 4;
  JobStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp next_run = 8;
  map<string, string> metadata = 9;
  int32 priority = 10;
  int32 max_retries = 11;
  int32 timeout = 12;
  google.protobuf.Timestamp last_run = 13;
}

message UpdateJobResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string cron_expression = 4;
  JobStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp last_run = 8;
  map<string, string> metadata = 9;
  int32 priority = 10;
  int32 max_retries = 11;
  int32 timeout = 12;
}

message CreateJobRequest {
  string name = 1;
  string description = 2;
  string cron_expression = 3;
  map<string, string> metadata = 4;
  int32 priority = 5;
  int32 max_retries = 6;
  int32 timeout = 7;
  JobStatus status = 8; // Optional, defaults to PENDING if not specified
}

message GetJobRequest {
  string id = 1;
}

message ListJobsRequest {
  int32 page_size = 1;
  string status = 2;
  string last_id = 3;
}

message ListJobsResponse {
  repeated JobResponse jobs = 1;
  int32 total = 2;
  string next_page = 3;
}

message UpdateJobRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string cron_expression = 4;
  JobStatus status = 5;
  map<string, string> metadata = 6;
  int32 priority = 7;
  int32 max_retries = 8;
  int32 timeout = 9;
  google.protobuf.Timestamp last_run = 10;
}

message DeleteJobRequest {
  string id = 1;
}

message DeleteJobResponse {
  bool success = 1;
}

message CreateJobResponse {
  string job_id = 1;
}

message CancelJobRequest {
  string id = 1;
}

message CancelJobResponse {
  bool success = 1;
  string message = 2;
}
