syntax = "proto3";

package job;

import "api/proto/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nedson202/dts-go/pkg/job";

service JobService {
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse) {
    option (google.api.http) = {
      post: "/v1/jobs"
      body: "*"
    };
  }
  rpc GetJob(GetJobRequest) returns (Job) {
    option (google.api.http) = {
      get: "/v1/jobs/{id}"
    };
  }
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {
    option (google.api.http) = {
      get: "/v1/jobs"
    };
  }
  rpc UpdateJob(UpdateJobRequest) returns (Job) {
    option (google.api.http) = {
      put: "/v1/jobs/{id}"
      body: "*"
    };
  }
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse) {
    option (google.api.http) = {
      delete: "/v1/jobs/{id}"
    };
  }
}

enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_PENDING = 1;
  JOB_STATUS_SCHEDULED = 2;
  JOB_STATUS_RUNNING = 3;
  JOB_STATUS_COMPLETED = 4;
  JOB_STATUS_FAILED = 5;
  JOB_STATUS_PAUSED = 6;
  JOB_STATUS_CANCELLED = 7;
  JOB_STATUS_RETRYING = 8;
}

message Job {
  string id = 1;
  string name = 2;
  string description = 3;
  string cron_expression = 4;
  JobStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp last_run = 8;
  map<string, string> metadata = 9;
  int32 priority = 10;
  int32 max_retries = 11;
  int32 timeout = 12;
}

message CreateJobRequest {
  string name = 1;
  string description = 2;
  string cron_expression = 3;
  map<string, string> metadata = 4;
  int32 priority = 5;
  int32 max_retries = 6;
  int32 timeout = 7;
  JobStatus status = 8; // Optional, defaults to PENDING if not specified
}

message GetJobRequest {
  string id = 1;
}

message ListJobsRequest {
  int32 page_size = 1;
  string status = 2;
  string last_id = 3;
}

message ListJobsResponse {
  repeated Job jobs = 1;
  int32 total = 2;
  string next_page = 3;
}

message UpdateJobRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string cron_expression = 4;
  JobStatus status = 5;
  map<string, string> metadata = 6;
  int32 priority = 7;
  int32 max_retries = 8;
  int32 timeout = 9;
}

message DeleteJobRequest {
  string id = 1;
}

message DeleteJobResponse {
  bool success = 1;
}

message CreateJobResponse {
  string job_id = 1;
}
